--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --target prod --tag seatconnecttomqtt:latest:$(date +%s)
+      run: docker build . --file Dockerfile --target prod --tag seatconnecttomqtt:latest
 
     - name: Docker Push
       run: docker push ${{secrets.DOCKER_USER}}/rliegmann/seatconnecttomqtt
