--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,5 +24,8 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --target prod --tag seatconnecttomqtt:latest
 
+    - name: Docker Tag
+      run: docker tag seatconnecttomqtt:latest rliegmann/seatconnecttomqtt:latest
+      
     - name: Docker Push
       run: docker push rliegmann/seatconnecttomqtt:latest
