--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,19 +13,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: docker login
-      env:
-        DOCKER_USER: ${{secrets.DOCKER_USER}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run: 
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+    - name: Checkout
+      uses: actions/checkout@v3    
     
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --target prod --tag seatconnecttomqtt:latest
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-    - name: Docker Tag
-      run: docker tag seatconnecttomqtt:latest rliegmann/seatconnecttomqtt:latest
-      
-    - name: Docker Push
-      run: docker push rliegmann/seatconnecttomqtt:latest
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: rliegmann/seatconnecttomqtt:latest
