--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,33 @@ attrs==22.2.0
 beautifulsoup4==4.12.0
 cffi==1.15.1
 charset-normalizer==3.1.0
-cryptography==40.0.0
+contourpy==1.0.7
+cryptography==40.0.1
+cycler==0.11.0
+fonttools==4.39.3
 frozenlist==1.3.3
+geojson==3.0.1
 idna==3.4
+kiwisolver==1.4.4
 lxml==4.9.2
+matplotlib==3.7.1
 multidict==6.0.4
+numpy==1.24.2
+OSMPythonTools==0.3.5
+packaging==23.0
 paho-mqtt==1.6.1
+pandas==1.5.3
+Pillow==9.5.0
+pipdeptree==2.7.0
 pycparser==2.21
 PyJWT==2.6.0
-schedule==1.1.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
 seatconnect==1.1.6
+six==1.16.0
 soupsieve==2.4
+ujson==5.7.0
+xarray==2023.3.0
 xmltodict==0.13.0
 yarl==1.8.2
