--- a/settings.env.template
+++ b/settings.env.template
@@ -12,3 +12,4 @@ SEAT_CONNECT_PASS=SuperSecreetPassword
 # other settings
 SETTINGS_INTERVAL=900  
 SETTINGS_OPENHAB_USE=true
+SETTINGS_ADDRESS_LOOKUP=true
