--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
             "label": "docker-build",
             "platform": "python",
             "dockerBuild": {
-                "tag": "seatconnecttomqtt:latest",
+                "tag": "rliegmann/seatconnecttomqtt:latest",
                 "dockerfile": "${workspaceFolder}/Dockerfile",
                 "target": "prod",
                 "pull": false
